--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT =3005
+linkDB=mongodb://noorak:0000@ac-r8lccbr-shard-00-00.gjoluku.mongodb.net:27017,ac-r8lccbr-shard-00-01.gjoluku.mongodb.net:27017,ac-r8lccbr-shard-00-02.gjoluku.mongodb.net:27017/?ssl=true&replicaSet=atlas-a59n8a-shard-0&authSource=admin&retryWrites=true&w=majority
